# Muggle

./: .env.example  .gitignore  .graphifyignore  CLAUDE.md  GEMINI.md  README.md  aia_faq.md  config.toml  eval_retrieval.py  eval_retrieval_ragas.py  pyproject.toml  sample_test_queries.json  中华人民共和国社会保险法.md
.run/: app.run.xml
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
muggle/: ai.py  app.py  config.py  registry.py
muggle/registry/: __init__.py  model.py  prompt.py
muggle/static/: index.html
openspec/changes/graceful-flask-startup/: design.md  tasks.md
openspec/changes/prompt-registry-refinement/: design.md  proposal.md  tasks.md
openspec/changes/simplify-warmup/: proposal.md
openspec/specs/ai-processor/: spec.md
openspec/specs/application-lifecycle/: spec.md
openspec/specs/bm25-sparse-vector/: spec.md
openspec/specs/chat-api/: spec.md
openspec/specs/chat-interface/: spec.md
openspec/specs/cli-entrypoint/: spec.md
openspec/specs/error-handling/: spec.md
openspec/specs/faq-loader/: spec.md
openspec/specs/faq-retrieval/: spec.md
openspec/specs/graph-node-architecture/: spec.md
openspec/specs/law-loader/: spec.md
openspec/specs/llm-processor/: spec.md
prompts/system/: default.md
prompts/user/: default.md
src/muggle/: app.py
tests/: test_ai.py  test_app.py  test_config.py  test_eval_retrieval_ragas.py  test_law_loader.py  test_llm.py  test_rag.py  test_registry.py  test_validate.py  test_vector.py  verify_milvus.py
(+154 files in other folders)
