[project]
name = "muggle"
version = "0.1.0"
description = ""
authors = [
    { name = "Edward Wu", email = "robotmice@gmail.com" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "scikit-learn>=1.8.0,<2.0.0",
    "langchain>=1.2.15,<2.0.0",
    "langgraph>=1.1.10,<2.0.0",
    "langchain-community>=0.4.1,<0.5.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "langchain-deepseek>=1.0.1,<2.0.0",
    "flask>=3.1.3,<4.0.0",
    "pandas>=3.0.2,<4.0.0",
    "requests>=2.33.1,<3.0.0",
    "pydantic>=2.13.3,<3.0.0",
    "pymilvus>=2.6.12,<3.0.0",
    "dashscope>=1.25.17,<2.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "langchain-milvus>=0.3.3,<0.4.0",
    "langchain-mcp-adapters>=0.2.2,<0.3.0",
    "langchain-core>=1.3.2,<2.0.0",
    "pydash>=8.0.6,<9.0.0",
    "grandalf (>=0.8,<0.9)",
    "langmem (>=0.0.30,<0.0.31)"
]

[project.scripts]
muggle = "muggle.app:run"
load-faq = "muggle.infra.loaders.faq_loader:run_loader"

[tool.poetry]
packages = [{ include = "muggle", from = "src" }]

[dependency-groups]
dev = [
    "ragas>=0.4.3,<0.5.0",
    "pytest>=9.0.3,<10.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
